--- a/src/MovieLibrary/Views/Shared/_Layout.cshtml
+++ b/src/MovieLibrary/Views/Shared/_Layout.cshtml
@@ -54,6 +54,7 @@
                             if (User.CanManagerUsers())
                             {
                                 await ProduceNavItem("Users", "Index", "Manage Users");
+                                await ProduceNavItem("Roles", "Index", "Manage Roles");
                             }
                         }
                     </ul>
