--- a/src/MovieLibrary/Views/Users/EditUser.cshtml
+++ b/src/MovieLibrary/Views/Users/EditUser.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = $"Edit User {Model.UserName}";
 }
 
-@model MovieLibrary.UserManagement.ViewModels.UserDetailsViewModel;
+@model MovieLibrary.UserManagement.ViewModels.Users.UserDetailsViewModel;
 
 <form method="post" asp-action="UpdateUser">
     <table class="table table-hover table-responsive">
