--- a/src/MovieLibrary/Views/Users/RegisterUser.cshtml
+++ b/src/MovieLibrary/Views/Users/RegisterUser.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Register User";
 }
 
-@model MovieLibrary.UserManagement.ViewModels.NewUserViewModel;
+@model MovieLibrary.UserManagement.ViewModels.Users.NewUserViewModel;
 
 <div class="col-md-4">
     <form method="post" asp-action="RegisterUser">
