--- a/src/MovieLibrary/Views/Roles/CreateRole.cshtml
+++ b/src/MovieLibrary/Views/Roles/CreateRole.cshtml
@@ -10,26 +10,7 @@
         <div><span asp-validation-for="Name" class="text-danger"></span></div>
         <input asp-for="Name" class="form-control" />
     </div>
-    <table class="table table-hover">
-        <thead>
-        <tr>
-            <th scope="col">Permission</th>
-            <th class="text-center" scope="col">Assigned</th>
-        </tr>
-        </thead>
-        <tbody>
-        @for (var i = 0; i < Model.Permissions.Count; ++i)
-        {
-            <tr>
-                <td>@Model.Permissions[i].PermissionName</td>
-                <td class="text-center">
-                    <input type="checkbox" asp-for="Permissions[i].Assigned"/>
-                    <input type="hidden" asp-for="Permissions[i].PermissionName"/>
-                </td>
-            </tr>
-        }
-        </tbody>
-    </table>
+    @await Html.PartialAsync("_PermissionsTablePartial", Model.Permissions)
     <button class="btn btn-primary" type="submit">Create</button>
     <a class="btn btn-secondary" asp-action="Index">Cancel</a>
 </form>
