--- a/src/MovieLibrary/Views/Roles/EditRole.cshtml
+++ b/src/MovieLibrary/Views/Roles/EditRole.cshtml
@@ -5,7 +5,7 @@
 @model MovieLibrary.UserManagement.ViewModels.Roles.RoleDetailsViewModel;
 
 <form class="col-md-6" method="post" asp-action="UpdateRole">
-    @await Html.PartialAsync("_PermissionsTablePartial", Model.Permissions)
+    @await Html.PartialAsync("_PermissionsTablePartial", Model)
     <input type="hidden" asp-for="RoleId"/>
     <button class="btn btn-primary" type="submit">Update</button>
     <a class="btn btn-secondary" asp-action="Index">Cancel</a>
