--- a/src/MovieLibrary/Views/Users/Index.cshtml
+++ b/src/MovieLibrary/Views/Users/Index.cshtml
@@ -37,10 +37,10 @@
                     <div class="col-auto container">
                         <div class="row">
                             <div class="col">
-                                <a asp-action="EditUser" asp-route-id="@user.Id">Edit</a>
+                                <a class="btn-link" asp-action="EditUser" asp-route-id="@user.Id">Edit</a>
                             </div>
                             <div class="col">
-                                <a asp-action="ConfirmUserDeletion" asp-route-id="@user.Id">Delete</a>
+                                <a class="btn-link" asp-action="ConfirmUserDeletion" asp-route-id="@user.Id">Delete</a>
                             </div>
                         </div>
                     </div>
