--- a/src/MovieLibrary/Views/Users/EditUser.cshtml
+++ b/src/MovieLibrary/Views/Users/EditUser.cshtml
@@ -18,8 +18,16 @@
             <tr>
                 <td>@Model.Roles[i].RoleName</td>
                 <td class="text-center">
-                    <input type="checkbox" asp-for="Roles[i].Assigned"/>
-                    <input type="hidden" asp-for="Roles[i].RoleName"/>
+                    @if (Model.Roles[i].ReadOnly)
+                    {
+                        <input type="checkbox" disabled asp-for="Roles[i].Assigned" />
+                        <input type="hidden" asp-for="Roles[i].Assigned" />
+                    }
+                    else
+                    {
+                        <input type="checkbox" asp-for="Roles[i].Assigned" />
+                    }
+                    <input type="hidden" asp-for="Roles[i].RoleName" />
                 </td>
             </tr>
         }
