--- a/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
+++ b/src/MovieLibrary/Views/MoviesToSee/Index.cshtml
@@ -8,23 +8,17 @@
 
 @if (Model.AddedMovie)
 {
-    <div class="alert alert-success" role="alert">
-        The movie was added successfully.
-    </div>
+    @await Html.PartialAsync("_AlertSuccessPartial", "The movie was added successfully.")
 }
 
 @if (Model.MarkedMovieAsSeen)
 {
-    <div class="alert alert-success" role="alert">
-        The movie was marked as seen.
-    </div>
+    @await Html.PartialAsync("_AlertSuccessPartial", "The movie was marked as seen.")
 }
 
 @if (Model.DeletedMovie)
 {
-    <div class="alert alert-success" role="alert">
-        The movie was deleted successfully.
-    </div>
+    @await Html.PartialAsync("_AlertSuccessPartial", "The movie was deleted successfully.")
 }
 
 @if (User.HasPermission(ApplicationPermissions.MoviesToSee.Add))
