Fix URLs for images in error views

--- a/src/MovieLibrary/Views/Errors/Error.cshtml
+++ b/src/MovieLibrary/Views/Errors/Error.cshtml
@@ -10,6 +10,6 @@
         <a href="/" class="alert-link">Go Home</a>
     </div>
     <div>
-        <img src="/img/error.jpg" width="800" height="450" alt="Error" />
+        <img src="~/img/error.jpg" width="800" height="450" alt="Error" />
     </div>
 </div>
