--- a/src/MovieLibrary/Views/Errors/Error404.cshtml
+++ b/src/MovieLibrary/Views/Errors/Error404.cshtml
@@ -8,6 +8,6 @@
         <a href="/" class="alert-link">Go Home</a>
     </div>
     <div>
-        <img src="/img/error404.jpg" width="800" height="532" alt="Error 404" />
+        <img src="~/img/error404.jpg" width="800" height="532" alt="Error 404" />
     </div>
 </div>
