--- a/src/MovieLibrary/Views/Errors/Error500.cshtml
+++ b/src/MovieLibrary/Views/Errors/Error500.cshtml
@@ -10,6 +10,6 @@
         <a href="/" class="alert-link">Go Home</a>
     </div>
     <div>
-        <img src="/img/error500.jpg" width="596" height="318" alt="Error 500" />
+        <img src="~/img/error500.jpg" width="596" height="318" alt="Error 500" />
     </div>
 </div>
