Fix Home links on error pages

--- a/src/MovieLibrary/Views/Errors/Error.cshtml
+++ b/src/MovieLibrary/Views/Errors/Error.cshtml
@@ -7,7 +7,7 @@
 <div class="text-center">
     <div class="alert alert-danger" role="alert">
         HTTP error @(Model.StatusCode) has occurred<br />
-        <a href="/" class="alert-link">Go Home</a>
+        <a href="~/" class="alert-link">Go Home</a>
     </div>
     <div>
         <img src="~/img/error.jpg" width="800" height="450" alt="Error" />
