--- a/src/MovieLibrary/Views/Errors/Error404.cshtml
+++ b/src/MovieLibrary/Views/Errors/Error404.cshtml
@@ -5,7 +5,7 @@
 <div class="text-center">
     <div class="alert alert-danger" role="alert">
         The page you requested was not found :(<br />
-        <a href="/" class="alert-link">Go Home</a>
+        <a href="~/" class="alert-link">Go Home</a>
     </div>
     <div>
         <img src="~/img/error404.jpg" width="800" height="532" alt="Error 404" />
