--- a/src/MovieLibrary/Views/Errors/Error500.cshtml
+++ b/src/MovieLibrary/Views/Errors/Error500.cshtml
@@ -7,7 +7,7 @@
 <div class="text-center">
     <div class="alert alert-danger" role="alert">
         Something went wrong :(<br />
-        <a href="/" class="alert-link">Go Home</a>
+        <a href="~/" class="alert-link">Go Home</a>
     </div>
     <div>
         <img src="~/img/error500.jpg" width="596" height="318" alt="Error 500" />
