Add check for movie uniqueness

--- a/src/MovieLibrary/Views/MoviesToGet/Index.cshtml
+++ b/src/MovieLibrary/Views/MoviesToGet/Index.cshtml
@@ -6,6 +6,11 @@
 @using MovieLibrary.Extensions
 @model MoviesToGetViewModel
 
+@if (!String.IsNullOrEmpty(Model.ErrorMessage))
+{
+    @await Html.PartialAsync("_AlertErrorPartial", Model.ErrorMessage)
+}
+
 @if (Model.AddedMovie)
 {
     @await Html.PartialAsync("_AlertSuccessPartial", "The movie was added successfully.")
