--- a/src/MovieLibrary/Views/MoviesToSee/ConfirmMovieAdding.cshtml
+++ b/src/MovieLibrary/Views/MoviesToSee/ConfirmMovieAdding.cshtml
@@ -32,7 +32,10 @@
     {
         <input type="hidden" asp-for="Genres[i]" />
     }
-    <input type="hidden" asp-for="Summary" />
+    @for (var i = 0; i < Model.SummaryParagraphs.Count; ++i)
+    {
+        <input type="hidden" asp-for="SummaryParagraphs[i]" />
+    }
     <button class="btn btn-primary" type="submit">Add</button>
     <a class="btn btn-secondary" asp-action="Index">Cancel</a>
 </form>
