Remove space before comma in lists

--- a/src/MovieLibrary/Views/Shared/_MovieInfoPartial.cshtml
+++ b/src/MovieLibrary/Views/Shared/_MovieInfoPartial.cshtml
@@ -81,12 +81,8 @@
         var list = source.ToList();
         for (var i = 0; i < list.Count; ++i)
         {
-            <span>@list[i]</span>
-
-            if (i + 1 < list.Count)
-            {
-                @:,
-            }
+            var delimiter = i + 1 < list.Count ? "," : String.Empty;
+            <span>@list[i]</span>@delimiter
         }
     }
 }
